--- a/szcpvue/public/index.html
+++ b/szcpvue/public/index.html
@@ -8,9 +8,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="keywords"
-    content="Valve公司实习招聘系统">
+    content="公司实习招聘系统">
   <meta name="description"
-    content="Valve公司实习招聘系统">
+    content="公司实习招聘系统">
 
   <link rel="icon" href="<%= BASE_URL %>favicon.png">
   <title></title>
